--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
